# src/main/resources/static/api-docs.yaml
@@ -8,7 +8,7 @@ servers:
   - url: http://localhost:8090
     description: Development server
 paths:
-  /score/{db}/{id}:
+  /scores/{db}/{id}:
     get:
       summary: Returns a score from a database
       tags:
@@ -37,7 +37,7 @@ paths:
           $ref: "#/components/responses/UnauthorizedError"
         '404':
           description: Score or database does not exist
-  /score/{db}/{id}/annotate:
+  /scores/{db}/{id}/annotate:
     post:
       summary: Stores an annotation for the score.
       tags:
@@ -58,18 +58,66 @@ paths:
       requestBody:
         required: true
         content:
-          image/png:
+          multipart/form-data:
             schema:
-              type: string
-              format: binary
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                image:
+                  type: string
+                  format: binary
+                interactions:
+                  type: string
+                  format: binary
       responses:
-        '200':
+        '201':
           description: Annotation successfully created
         '401':
           $ref: "#/components/responses/UnauthorizedError"
         '404':
           description: Score, database, or user does not exist
-  /score/{db}/{user}/pending:
+  /scores/{db}/{id}/invalidate:
+    post:
+      summary: Marks a score as invalid.
+      tags:
+        - Score management
+      parameters:
+        - name: db
+          in: path
+          description: Database to get the score from. Currently only "primus" is available.
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          description: ID of the score
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+          application/form-data:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+      responses:
+        '200':
+          description: Score invalidated
+        '401':
+          $ref: "#/components/responses/UnauthorizedError"
+        '404':
+          description: Score or database does not exist
+  /scores/{db}/{user}/pending:
     get:
       summary: Returns a random score
       tags:
